// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create Today/Yesterday preview 1`] = `
<div
  className="DateFilterPreview"
>
  <span
    className="parameterName"
  >
    Start Date
     
  </span>
  occurs
  : 
  <PreviewItemValue>
    Today
  </PreviewItemValue>
</div>
`;

exports[`should create correct fixed date preview 1`] = `
<div
  className="DateFilterPreview"
>
  <span
    className="parameterName"
  >
    Start Date
     
  </span>
  occurs
  : 
  between
   
  <PreviewItemValue>
    2015-01-20
  </PreviewItemValue>
   and
   
  <PreviewItemValue>
    2019-05-11
  </PreviewItemValue>
</div>
`;

exports[`should create correct last... with custom preview 1`] = `
<div
  className="DateFilterPreview"
>
  <span
    className="parameterName"
  >
    End Date
     
  </span>
  occurs
  : 
  in the last
   
  <PreviewItemValue>
    5 months
  </PreviewItemValue>
</div>
`;

exports[`should create variable preview 1`] = `
<div
  className="DateFilterPreview"
>
  <span
    className="parameterName"
  />
  <span>
     
    is
     
  </span>
  in the last
   
  <PreviewItemValue>
    2 days
  </PreviewItemValue>
  <span>
     
    or
     
  </span>
  <PreviewItemValue>
    null
  </PreviewItemValue>
  <span>
     
    or
     
  </span>
  <PreviewItemValue>
    undefined
  </PreviewItemValue>
</div>
`;

exports[`should include time information if fixed date filter contains time info 1`] = `
<div
  className="DateFilterPreview"
>
  <span
    className="parameterName"
  >
    Start Date
     
  </span>
  occurs
  : 
  between
   
  <PreviewItemValue>
    2015-01-20 at 14:12
  </PreviewItemValue>
   and
   
  <PreviewItemValue>
    2019-05-11 at 19:24
  </PreviewItemValue>
</div>
`;
